--- a/portfolio/templates/sitepages/index.html
+++ b/portfolio/templates/sitepages/index.html
@@ -73,25 +73,25 @@
 
 <section id="project-1" class="projects middle-section">
   <div class="row">
-    <div class="col-md-7 visual">
+    <div class="visual">
       <a href="https://www.lingodream.com/" target="_blank"><img src="{% static 'images/projects/lingodream_screenshot.png' %}" alt=""></a>
     </div>
-    <div class="col-md-5 description">
+    <div class="description">
       <h2 class="project-title">LingoDream</h2>
       <p class="project-text">{% trans "A web app that helps language learners read texts in foreign languages." %}</p>
       <p class="technologies"><strong>{% trans "Frontend" %}: </strong>
-        <span class="badge badge-info">Javascript</span>
-        <span class="badge badge-info">jQuery</span>
-        <span class="badge badge-info">Bootstrap</span>
-        <span class="badge badge-info">HTML5</span>
-        <span class="badge badge-info">CSS3</span>
-        <span class="badge badge-info">Ajax</span>
+        <span class="badge badge-secondary">Javascript</span>
+        <span class="badge badge-secondary">jQuery</span>
+        <span class="badge badge-secondary">Bootstrap</span>
+        <span class="badge badge-secondary">HTML5</span>
+        <span class="badge badge-secondary">CSS3</span>
+        <span class="badge badge-secondary">Ajax</span>
       </p>
       <p class="technologies"><strong>{% trans "Backend" %}: </strong>
         <span class="badge badge-primary">Python</span>
         <span class="badge badge-primary">Django</span>
         <span class="badge badge-primary">PostgreSQL</span>
-        <span class="badge badge-primary">ReSTful APIs</span>
+        <span class="badge badge-primary">REST APIs</span>
         <span class="badge badge-primary">RegExp</span>
         <span class="badge badge-primary">Django-Rest-Framework</span>
         <span class="badge badge-primary">Email Integration</span>
@@ -102,10 +102,10 @@
         <span class="badge badge-primary">Unit Testing</span>
       </p>
       <p class="technologies"><strong>{% trans "Cloud" %}: </strong>
-        <span class="badge badge-success">Amazon Web Services (AWS)</span>
-        <span class="badge badge-success">Azure Cognitive Services</span>
-        <span class="badge badge-success">Content Delivery Networks (CDN)</span>
-        <span class="badge badge-success">Heroku</span>
+        <span class="badge badge-secondary">Amazon Web Services (AWS)</span>
+        <span class="badge badge-secondary">Azure Cognitive Services</span>
+        <span class="badge badge-secondary">Content Delivery Networks (CDN)</span>
+        <span class="badge badge-secondary">Heroku</span>
       </p>
       <p class="technologies"><strong>{% trans "Other" %}: </strong>
         <span class="badge badge-secondary">Chrome Extension</span>
@@ -117,6 +117,7 @@
         <span class="badge badge-secondary">PyCharm</span>
         <span class="badge badge-secondary">Docker</span>
         <span class="badge badge-secondary">Git</span>
+        <span class="badge badge-secondary">12-Factor App</span>
       </p>
       <a class="btn btn-outline-primary project-link" href="https://www.lingodream.com/" target="_blank">{% trans "Teleport" %}</a>
     </div>
@@ -125,29 +126,29 @@
 
 <section id="project-2" class="projects middle-section">
   <div class="row">
-    <div class="col-md-5 description">
+    <div class="description">
       <h2 class="project-title">EmoCards</h2>
       <p class="project-text">{% trans "A ReactJS + Django App that trains people to recognise emotions displayed in facial expressions." %}</p>
 
       <p class="technologies"><strong>{% trans "Frontend" %}: </strong>
-        <span class="badge badge-info">React</span>
-        <span class="badge badge-info">Javascript</span>
-        <span class="badge badge-info">ES6</span>
-        <span class="badge badge-info">Redux</span>
-        <span class="badge badge-info">HTML5</span>
-        <span class="badge badge-info">CSS3</span>
+        <span class="badge badge-primary">React</span>
+        <span class="badge badge-primary">Javascript</span>
+        <span class="badge badge-primary">ES6</span>
+        <span class="badge badge-primary">Redux</span>
+        <span class="badge badge-primary">HTML5</span>
+        <span class="badge badge-primary">CSS3</span>
       </p>
       <p class="technologies"><strong>{% trans "Backend" %}: </strong>
-        <span class="badge badge-primary">Python</span>
-        <span class="badge badge-primary">Django</span>
-        <span class="badge badge-primary">PostgreSQL</span>
-        <span class="badge badge-primary">ReSTful APIs</span>
-        <span class="badge badge-primary">Django-Rest-Framework</span>
-        <span class="badge badge-primary">Unit Testing</span>
+        <span class="badge badge-secondary">Python</span>
+        <span class="badge badge-secondary">Django</span>
+        <span class="badge badge-secondary">PostgreSQL</span>
+        <span class="badge badge-secondary">REST APIs</span>
+        <span class="badge badge-secondary">Django-Rest-Framework</span>
+        <span class="badge badge-secondary">Unit Testing</span>
       </p>
       <p class="technologies"><strong>{% trans "Cloud" %}: </strong>
-        <span class="badge badge-success">Digital Ocean</span>
-        <span class="badge badge-success">Google Cloud Platform (GCP)</span>
+        <span class="badge badge-secondary">Digital Ocean</span>
+        <span class="badge badge-secondary">Google Cloud Platform (GCP)</span>
       </p>
       <p class="technologies"><strong>{% trans "Other" %}: </strong>
         <span class="badge badge-secondary">Command Line</span>
@@ -158,7 +159,7 @@
       <a class="btn btn-outline-primary project-link" href="" target="_blank">{% trans "Demo" %}</a>
       <a class="btn btn-outline-secondary project-link" href="" target="_blank">{% trans "GitHub" %}</a>
     </div>
-    <div class="col-md-7 visual">
+    <div class="visual">
       <a href="https://www.lingodream.com/" target="_blank"><img src="{% static 'images/projects/lingodream_screenshot.png' %}" alt=""></a>
     </div>
   </div>
@@ -211,6 +212,7 @@
           </p>
           <p class="about-text-p">
           {% blocktrans %}Curiosity is my biggest source of joy.
+            And programming is my greatest passion.
             I am constantly hungry for new things to learn.{% endblocktrans %}
           </p>
         </div>
