--- a/portfolio/templates/sitepages/index.html
+++ b/portfolio/templates/sitepages/index.html
@@ -61,7 +61,7 @@
 <section id="header" class="header first-section">
   <h1 class="large-text">{% trans "Hi, I'm Zilong, a full-stack web developer." %}</h1>
   <p class="medium-text">{% trans "I build, deploy, and optimise scalable full-stack web applications." %}</p>
-  <p class="medium-text">{% blocktrans %}I LOVE Python, Javascript, and <em>Game of Thrones</em>!{% endblocktrans %} 🐺</p>
+  <p class="medium-text">{% blocktrans %}I LOVE Python, JavaScript, and <em>Game of Thrones</em>!{% endblocktrans %} 🐺</p>
   <p class="medium-text">{% trans "Say hello" %}: <a class="email-link" href="mailto:hi@zilongli.com">hi@zilongli.com</a></p>
   <div class="scroll-down-div">
     <a class="scroll-down smooth-scroll" href="#project-1">
@@ -80,7 +80,7 @@
       <h2 class="project-title">LingoDream</h2>
       <p class="project-text">{% trans "A web app that helps language learners read texts in foreign languages." %}</p>
       <p class="technologies"><strong>{% trans "Frontend" %}: </strong>
-        <span class="badge badge-secondary">Javascript</span>
+        <span class="badge badge-secondary">JavaScript</span>
         <span class="badge badge-secondary">jQuery</span>
         <span class="badge badge-secondary">Bootstrap</span>
         <span class="badge badge-secondary">HTML5</span>
@@ -132,7 +132,7 @@
 
       <p class="technologies"><strong>{% trans "Frontend" %}: </strong>
         <span class="badge badge-primary">React</span>
-        <span class="badge badge-primary">Javascript</span>
+        <span class="badge badge-primary">JavaScript</span>
         <span class="badge badge-primary">ES6</span>
         <span class="badge badge-primary">Redux</span>
         <span class="badge badge-primary">HTML5</span>
@@ -204,7 +204,7 @@
           </p>
           <p class="about-text-p">{% blocktrans %}
             In addition to excelling in Python,
-            Django, Javascript, React, and PostgreSQL, I have extensive
+            Django, JavaScript, React, and PostgreSQL, I have extensive
             experience with cloud platforms including Amazon Web Services
             (AWS), Heroku, Digital Ocean, and Microsoft Azure as well as
             ReSTful APIs such as email providers, translation services,
